# zhost

./: .gitignore  LICENSE  README.md  flake.nix
checks/: nixos-sync.nix  sync-test.py
homeModules/: zotero.nix
nixosModules/: zhost.nix
pkgs/rustfs/: default.nix
pkgs/zhost/: default.nix
pkgs/zotero/: darwin.nix  default.nix  linux.nix
server/: Cargo.toml  SPEC.md
server/migrations/: 0001_init.sql  0002_files.sql  0003_fulltext.sql  0004_fulltext_search.sql  0005_item_search.sql  0006_item_columns.sql  0007_item_columns_fixes.sql
server/src/: main.rs  query.rs  s3.rs  store.rs
