[package]
name = "zhost"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
flate2 = "1"
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "postgres",
  "json",
  "migrate",
  "macros",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
