[package]
name = "zhost"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
flate2 = "1"
# Verify uploaded attachment bytes against the client-declared md5.
md-5 = "0.10"
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "postgres",
  "json",
  "migrate",
  "macros",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "fs"] }
# preserve_order keeps object key order under our control: Zotero's attachment
# fromJSON processes fields in order and needs linkMode before filename/path.
serde_json = { version = "1", features = ["preserve_order"] }
# Parse multi-valued query strings: the CLI `tag` filter repeats the key for AND.
serde_urlencoded = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
